--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "raum",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,25 +9,24 @@
     "export": "next build && next export"
   },
   "dependencies": {
-    "next": "10.1.3",
+    "next": "11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@headlessui/react": "^0.3.2",
-    "@heroicons/react": "1.0.0",
+    "@headlessui/react": "^1.2.0",
+    "@heroicons/react": "1.0.1",
     "@monaco-editor/react": "^4.1.1",
     "@tailwindcss/forms": "^0.3.2",
-    "@tailwindcss/jit": "^0.1.18",
     "@tailwindcss/line-clamp": "^0.2.0",
     "autoprefixer": "^10.2.5",
     "html-react-parser": "^1.2.4",
     "lodash": "^4.17.21",
+    "nanoid": "^3.1.23",
     "postcss": "^8.2.9",
     "prettier": "^2.2.1",
     "react-use-clipboard": "^1.0.7",
-    "tailwindcss": "^2.0.4",
-    "uuid": "^8.3.2",
+    "tailwindcss": "^2.1.4",
     "zustand": "^3.3.3"
   }
 }
